[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/objects/gem.png" type="Texture" id=1]
[ext_resource path="res://Scripts/UI/GemsCount.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "rotate"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "spin"

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "rotate"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=6]
resource_name = "spin"

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "rotate"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=9]
resource_name = "spin"

[node name="GemCounter" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="GemSprite1" type="Sprite" parent="."]
position = Vector2( 998, 20 )
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 1 )
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="GemSprite1"]
reset_on_save = false
anims/RESET = SubResource( 1 )
anims/rotate = SubResource( 2 )
anims/spin = SubResource( 3 )

[node name="GemSprite3" type="Sprite" parent="."]
position = Vector2( 897, 19 )
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 1 )
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="GemSprite3"]
reset_on_save = false
anims/RESET = SubResource( 4 )
anims/rotate = SubResource( 5 )
anims/spin = SubResource( 6 )

[node name="GemSprite2" type="Sprite" parent="."]
position = Vector2( 948, 19 )
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 1 )
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="GemSprite2"]
reset_on_save = false
anims/RESET = SubResource( 7 )
anims/rotate = SubResource( 8 )
anims/spin = SubResource( 9 )
